--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<div id="b">
+<div id="ba"><span id="baa">Marioclub Adventure Club</span></div>
+</div>
 <body>
     
 </body>
