header styles done

--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<div id="b">
-<div id="ba"><span id="baa">Marioclub Adventure Club</span></div>
-</div>
 <body>
+
+    <header>
+    <div>
+        <h1 id="mainheading">Marioclub Adventure Club</h1>
+    </div>
+
+     
+    <div class="nav-bar">
+        <a class="navbar-link" href="" >Home</a>
+        <a class="navbar-link" href="">Friends</a>
+        <a class="navbar-link" href="">Gallery</a>
+        <a class="navbar-link" href="">Contact</a>
+    </div>
+    <main>
+
+        <img src="Images/banner_2.jpg" alt="mario banner">
+        <div class="main-content">
+            <h1> Its me, Mario! </h1>
+            <p class="nav-link">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis adipisci expedita, beatae natus minus ut dolorum explicabo tempora quas, voluptates distinctio nisi minima pariatur, maiores sunt! Blanditiis ut nulla quibusdam ducimus tempore esse, voluptatibus, autem quisquam provident minus odio odit consectetur corrupti veniam facere voluptas recusandae nihil atque eaque reprehenderit nemo. A numquam tempora dolorem voluptate architecto hic expedita veritatis totam dolore, laboriosam laudantium quaerat mollitia doloremque eius nostrum voluptatum. Deserunt placeat aut eos saepe maxime delectus provident facere iste adipisci modi enim facilis temporibus sint cupiditate, assumenda nemo voluptatum quod dignissimos, sed impedit molestiae architecto itaque. Eveniet, molestias.</p>
+        </div>
+    </main>
+
+    <footer>
+    <h5 class="copyright">&copy; 2024 Favour Abass</h5>
+    </footer>
     
 </body>
 </html>
