gallery page done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <header>
     <div>
         <h1 id="mainheading">Marioclub Adventure Club</h1>
@@ -14,11 +13,12 @@
 
      
     <div class="nav-bar">
-        <a class="navbar-link" href="" >Home</a>
-        <a class="navbar-link" href="">Friends</a>
-        <a class="navbar-link" href="">Gallery</a>
-        <a class="navbar-link" href="">Contact</a>
+        <a class="navbar-link" href="index.html" >Home</a>
+        <a class="navbar-link" href="friends.html">Friends</a>
+        <a class="navbar-link" href="gallery.html">Gallery</a>
+        <a class="navbar-link" href="contact.html">Contact</a>
     </div>
+    </header>
     <main>
 
         <img src="Images/banner_2.jpg" alt="mario banner">
