modified gallery and index page

--- a/gallery.html
+++ b/gallery.html
@@ -23,15 +23,27 @@
         <main>
             <h1> Gallery </h1>
             <div class="gallery_pictures">
-                <div> 
-                    <img src="Images/thumb-1.png" alt="..." class="gallery-picture">
-                    <img src="Images/thumb-2.png" alt="" class="gallery-picture">
-                </div>
                 <div>
-                    <img src="Images/thumb-3.jpg" alt="..." class="gallery-picture">
-                    <img src="Images/thumb-4.jpg" alt="..." class="gallery-picture">
+                <div class="gallery-picture-wrap"> 
+                    <img src="Images/thumb-1.png" alt="..." class="gallery-picture">
+                    <h1>Mountains</h1>
+                </div>
+                <div class="gallery-picture-wrap">
+                    <img src="Images/thumb-2.png" alt="" class="gallery-picture">
+                    <h1>Undersea</h1>
                 </div>
             </div>
+            <div>
+                <div class="gallery-picture-wrap">
+                    <img src="Images/thumb-3.jpg" alt="..." class="gallery-picture">
+                    <h1>Art</h1>
+                </div>
+                <div class="gallery-picture-wrap">
+                    <img src="Images/thumb-4.jpg" alt="..." class="gallery-picture">
+                    <h1>Zombies</h1>
+                </div> 
+            </div>  
+        </div>
         </main>
 
         
